	- Tweaked compress_scripts algorithm to clean scripts better. 5% overall reduction in size
	- Completely rewrote css buttons and added color variants
	- Added social button options to core_buttons.php
	- Changed encoding of emails in class.email to be more html-friendly
	- Fixed a bug in validation script that prevent accurate detection with "match" parameter

## Version 6.8.0 ##
	- Added a pure css menu via lib/css/core_menus.php. Also added sample template to templates and _demo.php
	- Updated class.backup.php to work with latest version of framework

## Version 6.7.0 ##
	- Updated to latest version of Foundation Grid and used unabridged css
	- Added core_normalize.css (attributed)
	- Changed core_reset.css to be a true reset (attributed)
	- Added page expires settings to each page ($_expires['offset'])
	- Added compression and etags to .htaccess (Went from 42 to 92 on PageSpeed score)
	- Added .htaccess files to each empty folder for github support and later configuration
	- Added default php.ini file to support compression on some hosts
	- Change autoload CSS and JS folders to only look for CSS/PHP and JS files respectively
	- Added page-level meta data overrides (commented out by default)
	- Changed css load order so that core_resets and core_normalize load first
	- Changed core_stylesheets to always be PHP files and removed CSS versions for tidyness
	- Added jquery baseline
	- Re-designed "style_checker.php" and renamed to "_demo.php"
	- Changed overlays to be fixed position and tweaked overlay plugin
	- Rewrote validation script to appear cleaner on a page and support more elements

## Version 6.6.0 ##
	- Added custom jQuery input validation plugin
	- Added customer jQuery overlay plugin
	- Tweaked the .overlay css to be more fluid
	- Rebuilt class.email to provide better attachment and html support
	- Added custom jquery ajax script in js/functions_misc.js for easier ajax callbacks

## Version 6.5.2 ##
	- Added TinyMCE as a WYSIWYG option