@@ -1,4 +1,232 @@
 <?PHP
+// MYSQLi
+class mysql_i {
+	private $dbHost;
+	private $dbUser;
+	private $dbPass;
+	private $dbName;
+	private $mysqli;
+
+	// CHOOSE DEFAULT DB UPON INSTANTIATION
+	function __construct() {
+		$this->use_db();
+	}
+	
+	// DATABASE SELECTION
+	function use_db($choice='default') {
+		global $_db;
+
+		if(isset($_db[$choice])) {
+			$this->dbHost = $_db[$choice]['host'];
+			$this->dbUser = $_db[$choice]['user'];
+			$this->dbPass = $_db[$choice]['pass'];
+			$this->dbName = $_db[$choice]['db'];
+		}
+	}
+	
+	// CONNECT TO THE DATABASE
+	function connect() {
+		// CREATE CONNECTION
+		$this->mysqli = new mysqli($this->dbHost,$this->dbUser,$this->dbPass,$this->dbName);
+		
+		// CHECK FOR CONNECTION ERROR
+		if($this->mysqli->connect_errno) {
+			die(printf("Could not connect to database: %s\n",$mysqli->connect_error));
+		}
+		
+		return true;
+	}
+	
+	// RUN A QUERY AGAINST THE DATABASE
+	function query($sql,$load_array=true) {
+		// CONNECT
+		$this->connect();
+	
+		// PERFORM QUERY
+		$result = $this->mysqli->query($sql);
+		
+		// FREE RESULT SET
+		//$result->close();
+		
+		// CHECK FOR INSERTION ID
+		if(is_bool($result)) { $id = $this->mysqli->insert_id(); }
+		
+		// CLOSE CONNECTION
+		$this->mysqli->close();
+		
+		// IF RESULT IS NOT A NUMBER (ID)
+		if(!is_bool($result)) {
+			// IF RESULT IS ARRAY
+			if($load_array) {
+				$array = array();
+				// LOOP THROUGH ARRAY AND FETCH AS ASSOC
+				while($row = $result->fetch_assoc()) {
+					$array[] = $row;
+				}
+				
+				return $array;
+			}
+			// IF NOT ARRAY, JUST RETURN THE RESULT
+			else {
+				return $result;
+			}
+		}
+		// IF NUMBER, RETURN AS ID
+		else {
+			return $id;
+		}
+	}
+	
+	// INSERT A ROW INTO A TABLE
+	function insert($table,$input) {
+		// CONNECT FOR CLEANING
+		$this->connect();
+	
+		// CLEAN
+		$mysql = clean_db::mysqli($input);
+		$mysqli['table'] = clean_db::mysqli($table);
+		
+		// DISCONNECT
+		$this->mysqli->close();
+		
+		// GET COLUMNS FROM TABLE
+		$sql = "
+		SHOW COLUMNS 
+		FROM {$mysqli['table']} 
+		WHERE 'Key' != \"PRI\"
+		";
+		$show = $this->query($sql);
+		
+		// LOOP THROUGH COLUMNS AND BUILD COLUMN/VALUE ARRAYS
+		for($i=0;$i<count($show);$i++) {
+			if(isset($mysqli[$show[$i]['Field']])) {
+				$columns[] = $show[$i]['Field'];
+				$values[] = "'".$mysqli[$show[$i]['Field']]."'";
+			}
+		}
+		
+		// CONVERT ARRAYS INTO DELIMITED STRINGS
+		$columns = implode(', ',$columns);
+		$values = implode(', ',$values);
+		
+		// CREATE INSERTION QUERY
+		$sql = "
+		INSERT INTO {$mysqli['table']}
+		({$columns})
+		VALUES({$values})
+		";
+		
+		if($result = $this->query($sql)) {
+			return $result; 
+		}
+		else { return false; }
+	}
+	
+	// UPDATE A ROW IN A TABLE
+	function update($table, $input) {
+		// CONNECT FOR CLEANING
+		$this->connect();
+	
+		// CLEAN
+		$mysql = clean_db::mysqli($input);
+		$mysqli['table'] = clean_db::mysqli($table);
+		
+		// DISCONNECT
+		$this->mysqli->close();
+		
+		// GET COLUMNS FROM TABLE
+		$sql = "
+		SHOW COLUMNS 
+		FROM {$mysqli['table']}
+		";
+		$show = $this->query($sql);
+		
+		// LOOP THROUGH COLUMNS AND BUILD COLUMN/VALUE ARRAYS
+		for($i=0;$i<count($show);$i++) {
+			if($show[$i]['Key'] != 'PRI' && isset($mysqli[$show[$i]['Field']])) {
+				$updates[] = $show[$i]['Field']." = '".$mysqli[$show[$i]['Field']]."'";
+			}
+			else if($show[$i]['Key'] == 'PRI') {
+				$primary_key = $show[$i]['Field'];
+			}
+		}
+		
+		// CONVERT ARRAYS INTO DELIMITED STRINGS
+		$updates = implode(', ', $updates);
+		
+		// CREATE UPDATE QUERY
+		$sql = "
+		UPDATE {$mysqli['table']}
+		SET {$updates}
+		WHERE {$primary_key} = {$mysqli['key']}
+		";
+		
+		if($result = $this->query($sql)) { return $result; }
+		else { return false; }
+	}
+	
+	// SELECT ROW BY KEY FROM TABLE
+	function select($table,$key) {
+		// CONNECT FOR CLEANING
+		$this->connect();
+	
+		// CLEAN
+		$mysqli['table'] = clean_db::mysqli($table,$this->mysqli);
+		$mysqli['key'] = clean_db::mysqli($key,$this->mysqli);
+		
+		// DISCONNECT
+		$this->mysqli->close();
+		
+		// GET PRIMARY KEY COLUMN
+		$sql = "
+		SHOW INDEXES 
+		FROM {$mysqli['table']} 
+		WHERE Key_name = \"PRIMARY\"
+		";
+		$show = $this->query($sql);
+		$primary_key = $show[0]['Column_name'];
+		
+		// CREATE SELECT QUERY
+		$sql = "
+		SELECT * FROM {$mysqli['table']}
+		WHERE {$primary_key} = '{$mysqli['key']}'
+		";
+		
+		return $this->query($sql);
+	}
+	
+	// DELETE ROW FROM TABLE
+	function delete($table,$key) {
+		// CONNECT FOR CLEANING
+		$this->connect();
+	
+		// CLEAN
+		$mysqli['table'] = clean_db::mysqli($table);
+		$mysqli['key'] = clean_db::mysqli($key);
+		
+		// DISCONNECT
+		$this->mysqli->close();
+		
+		// GET PRIMARY KEY COLUMN
+		$sql = "
+		SHOW INDEXES 
+		FROM {$mysqli['table']} 
+		WHERE Key_name = \"PRIMARY\"
+		";
+		$show = $this->query($sql);
+		$primary_key = $show[0]['Column_name'];
+		
+		// CREATE DELETION QUERY
+		$sql = "
+		DELETE FROM {$mysqli['table']}
+		WHERE {$primary_key} = '{$mysqli['key']}'
+		";
+		
+		if($result = $this->query($sql)) { return $result; }
+		else { return false; }
+	}
+}
+	
 // MYSQL
 class mysql {
 	private $dbHost;
@@ -354,4 +582,24 @@ class sybase {
 		return $array;
 	}
 }
+
+// CLEANING
+class clean_db {
+	// CLEAN MYSQLi
+	static function mysqli($string,$db) {
+		if(!is_array($string)) {
+			$clean = $db->real_escape_string($string);
+		}
+		else {
+			foreach($string as $key=>$value) {
+				// IF A SUB ARRAY IS FOUND, IGNORE IT
+				if(!is_array($value)) {
+					$clean[$key] = $db->real_escape_string($value);
+				}
+			}
+		}
+		
+		return $clean;
+	}
+}	
 ?>
